[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["HamzaQahoush <hamza.qah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
